--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,7 @@ body {
     padding-left: 10px;
     background-color: #ffc7f1;
     box-shadow: 4px 2px;
+    flex-shrink: 0;
 }
 
 .card:hover {
@@ -80,11 +81,10 @@ body {
 .text {
     margin-right: auto;
     margin-left: auto;
-    font-size: 1.5em;
+    font-size: 2em;
     font-weight: bold;
     font-family: "Lucida handwriting", "Comic Sans", cursive;
-    color: #2b2b2b;
-    text-shadow: 3px 3px 0px rgba(0,0,0,0.1), 7px 7p
+    color: black;
 }
 
 .bubbles{
