--- a/styles.css
+++ b/styles.css
@@ -54,11 +54,11 @@ body {
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    width: 50%;
+    width: 75%;
     height: 10%;
     border: solid black 1px;
     border-radius: 25px;
-    margin: 2% 0 0 0;
+    margin: 2% 0 2% 0;
     padding-left: 10px;
     background-color: #ffc7f1;
     box-shadow: 4px 2px;
