--- a/css/styles.css
+++ b/css/styles.css
@@ -16,17 +16,19 @@ body {
 
 .header {
   display: grid;
-  grid-template-rows: minmax(150px,3fr) 1fr;
+  grid-template-rows: 3fr 1fr;
   justify-content: center;
+  margin-top: 5vh;
 }
 
 .cards {
   display: grid;
   grid-template-columns: 1fr;
   grid-auto-rows: min-content;
-  margin-top: 5%;
-  grid-row-gap: 5%;
+  margin-top: 2vh;
+  grid-row-gap: 2vh;
   justify-items: center;
+  justify-content: center;
   
 }
 
@@ -55,12 +57,12 @@ body {
 
 .card {
   display: grid;
-  grid-template-columns: 55px 1fr;
+  grid-template-columns: 7vh 1fr;
   justify-items: center;
-  height: 50px;
-  width: 75%;
+  height: 5vh;
+  width: 50vh;
   border: solid black 1px;
-  border-radius: 25px;
+  border-radius: 2vh;
   background-color: #ffc7f1;
   box-shadow: 4px 2px;
 }
@@ -71,7 +73,7 @@ body {
 }
 
 .card .logo {
-  width: 40px;
+  width: 4.5vh;
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
@@ -79,7 +81,7 @@ body {
 
 .text {
   width: 100%;
-  font-size: 30px;
+  font-size: 3vh;
   font-weight: bold;
   font-family: "Lucida handwriting", "Comic Sans", cursive;
   color: #2b2b2b;
