--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,8 @@ body {
   grid-template-columns: 7vh 1fr;
   justify-items: center;
   height: 5vh;
-  width: 50vh;
+  max-width: 75%;
+  width: 60vh;
   border: solid black 1px;
   border-radius: 2vh;
   background-color: #ffc7f1;
